http-proxy-ingress/003-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ingress.test
    http:
      paths:
      - path: /httpbin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin
            port:
              number: 8000
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
